fixed up the spacing and alignment of layout and also added placeholder images for album covers

--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,500;1,500;1,600&family=Montserrat:wght@400;700&display=swap');
 
 body {
-  font-family: "Roboto", sans-serif;
-  display: flex;
+    background-color: #000000;
+    font-family: "Roboto", sans-serif;
+    display: flex;
 }
 
 #searchsong {
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 }
 
 /* alter song input field to display full text */
 #songInput {
+    font-size: 20px;
+    margin-left: 2em;
     width: 50%;
-    padding: 8px 15px;
+    padding: 8px 16px;
     border-radius: 25px;
 }
 
@@ -50,48 +54,103 @@ p{
 
 /* Style suggest button */
 #suggest {
+    font-size: 24px;
+    font-weight: bold;
     padding: 8px 15px;
+    width: 100%;
+    height: 50px;
     background-color: #019592;
     color: #fff;
     border: none;
     border-radius: 25px;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 /* Style delete buttons which remove the song from list */
 .delete{
     padding: 8px 15px;
-    background-color: #707070;
-    color: #000000;
+    background-color: transparent;
     border: none;
     border-radius: 25px;
 }
 
-/* styling layout */
+/* styling layout of left side */
 #music-player {
     background-color: #F2E7FE;
-    /* border-radius: 10%; */
-    width: 50%;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 57px;
+    border-bottom-right-radius: 57px;
+    width: 30v%;
     height: 100vh;
     color: #23036A;
-    padding: 16px;
+    padding: 3em;
     /* margin-left: -15px; */
 }
 
-/* styling layout */
+/* adjusting the display of album cover display */
+#music-player > img {
+    width: 80%; 
+    height: auto;
+    border-radius: 60%;
+  }
+
+  
+/* styling layout of right side */
 #playlist {
-    background-color: #000000;
+    display: flex;
+    flex-direction: column;
     color: #fff;
-    padding: 16px
+    width: 70%;
+    height: 100vh;
+    padding: 3em;
 }
 
+/* main body of playlist containg album covers, tracks, artist, date added and a remove option */
 #playlistbody{
-    height: 60vh;
+    height: auto;
     overflow-y: scroll;
+    margin-top: 2em;
 }
+
+/* display of each individal item (song) and its data */
+.playlist-item {
+    display: flex;
+    justify-content: space-between;
+    height: 95px;
+    margin-bottom: 1em;
+    align-items: center;
+}
+
+.playlist-item > img {
+    border-radius: 50%;
+    max-height: 80%; 
+    width: auto;
+  }
+
+.playlist-item > .songArtist {
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+    border: #fff;
+    border-radius: 45px;
+    padding-left: 2em;
+    align-items: center;
+    padding-right: 4em;
+    padding-left: 4em;
+    background-color: #23036A;
+}
+
+
+/* 
+.playlist-item > .delete {
+    margin-left: auto;
+} */
 
 /* Making playlist items within one line */
 .playlist-item > * {
     display: inline-block;
-    vertical-align: baseline;
-    border-color: #F2E7FE;
 }
+
+  
